--- a/package.xml
+++ b/package.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>HOVER</name>
+  <name>hover</name>
   <version>0.0.0</version>
   <description>The project_ws package</description>
 
